# OMMeshlessAnimationFramework

./: .gitignore  CMakeLists.txt  LatticeExample.cpp  OMMeshlessAnimationFramework.sln  OMMeshlessAnimationFramework.vcxproj  OMMeshlessAnimationFramework.vcxproj.filters  README.md  imgui.ini  main.cpp
benchmarks/_warmup_duration/: 10x10grid_16x16tess_lsType0_evalMethod0_10w_20d.txt  10x10grid_16x16tess_lsType0_evalMethod0_2w_5d1.txt  10x10grid_16x16tess_lsType0_evalMethod0_2w_5d3.txt  10x10grid_16x16tess_lsType0_evalMethod0_2w_5d4.txt  10x10grid_16x16tess_lsType0_evalMethod0_5w_10d.txt  50x50grid_64x64tess_lsType0_evalMethod0_0w_1d.txt  50x50grid_64x64tess_lsType0_evalMethod0_5w_1d.txt
benchmarks_debug/_warmup_duration/: 10x10grid_16x16tess_lsType0_evalMethod0_2w_5d.txt  10x10grid_16x16tess_lsType0_evalMethod0_2w_5d2.txt  50x50grid_64x64tess_lsType0_evalMethod0_1w_10d.txt  50x50grid_64x64tess_lsType0_evalMethod0_1w_1d.txt  50x50grid_64x64tess_lsType0_evalMethod0_1w_2d.txt  50x50grid_64x64tess_lsType0_evalMethod0_1w_5d.txt  50x50grid_64x64tess_lsType0_evalMethod0_2w_10d.txt  50x50grid_64x64tess_lsType0_evalMethod0_2w_1d.txt  50x50grid_64x64tess_lsType0_evalMethod0_2w_2d.txt  50x50grid_64x64tess_lsType0_evalMethod0_2w_5d.txt  50x50grid_64x64tess_lsType0_evalMethod0_2w_5d1.txt
lattice/: Lattice.cpp  Lattice.h  SWVulkanLattice.cpp  SWVulkanLattice.h  Simulators.h
shaders/Lattice/: accuracy.frag  accuracy.frag.spv  accuracy.tese  accuracy.tese.spv  compile-accuracy.bat  compile-lattice.bat  compile-normals.bat  lattice.frag  lattice.frag.spv  lattice.tesc  lattice.tesc.spv  lattice.tese  lattice.tese.spv  lattice.vert  lattice.vert.spv  lattice_pre_buffer.tese  lattice_pre_buffer.tese.spv  lattice_sampled.tese  lattice_sampled.tese.spv  lattice_sampled_batched.tese  lattice_sampled_batched.tese.spv  normals.frag  normals.frag.spv  normals.geom  normals.geom.spv  normals.tese  normals.tese.spv  normals_pre_buffer.tese  normals_pre_buffer.tese.spv  normals_sampled.tese  normals_sampled.tese.spv  normals_sampled_batched.tese  pixel_accuracy.frag  pixel_accuracy.frag.spv  pixel_accuracy.tese  pixel_accuracy.tese.spv  pixel_accuracy_pre_buffer.tese  pixel_accuracy_pre_buffer.tese.spv  pixel_accuracy_sampled_batched.tese  surf_accuracy.frag  (+7 more)
src/: LatticeExample.cpp  main.cpp
src/lattice/: Lattice.cpp  Lattice.h  LatticeUtility.cpp  LatticeUtility.h  LocalSurface.cpp  LocalSurface.h  LocalSurfaceBuffer.cpp  LocalSurfaceBuffer.h  LocalSurfaceTexture.cpp  LocalSurfaceTexture.h  LocalSurfaceTextureBatch.cpp  LocalSurfaceTextureBatch.h  SWVulkanLattice.cpp  SWVulkanLattice.h  SWVulkanLatticePre.cpp  SWVulkanLatticePre.h  SWVulkanLatticePreBatched.cpp  SWVulkanLatticePreBatched.h  SWVulkanLatticePreBuffer.cpp  SWVulkanLatticePreBuffer.h  Shaders.cpp  Shaders.h  Simulators.cpp  Simulators.h  VulkanLattice.cpp  VulkanLattice.h
vulkan/: VulkanAndroid.cpp  VulkanBaseExample.cpp  VulkanBaseExample.h  VulkanFrameBuffer.hpp  VulkanModel.hpp  VulkanTexture.hpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.hpp  imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp  threadpool.hpp
(+1081 files in other folders)
